Added test for java version